[gd_scene load_steps=8 format=3 uid="uid://csknw816l4p70"]

[ext_resource type="Theme" uid="uid://ci1edh073cu36" path="res://main_theme.tres" id="1_f6jq3"]
[ext_resource type="Script" path="res://scenes/item_ui/item_ui.gd" id="2_w0axb"]
[ext_resource type="StyleBox" uid="uid://byr56nx5cfdbp" path="res://scenes/card_ui/card_base_stylebox.tres" id="3_qn4gu"]
[ext_resource type="Texture2D" uid="uid://c6rme2o6dyaoj" path="res://art/tile_0104.png" id="4_bp6wm"]
[ext_resource type="Script" path="res://scenes/item_ui/item_state_machine.gd" id="5_sc1ko"]
[ext_resource type="Script" path="res://scenes/item_ui/item_states/item_base_state.gd" id="6_wgml4"]
[ext_resource type="Script" path="res://scenes/item_ui/item_states/item_selected_state.gd" id="7_itwp2"]

[node name="ItemUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f6jq3")
script = ExtResource("2_w0axb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_qn4gu")

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_bp6wm")
expand_mode = 1
stretch_mode = 5

[node name="ItemStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_sc1ko")
initial_state = NodePath("ItemBaseState")

[node name="ItemBaseState" type="Node" parent="ItemStateMachine"]
script = ExtResource("6_wgml4")

[node name="ItemSelectedState" type="Node" parent="ItemStateMachine"]
script = ExtResource("7_itwp2")
state = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
